[gd_scene load_steps=11 format=3 uid="uid://putv0rkm3jbr"]

[ext_resource type="Script" path="res://scenes/shop/shop.gd" id="1_0f65x"]
[ext_resource type="PackedScene" uid="uid://i7ncmsg1fjjm" path="res://scenes/ui/weapon card/weapon_card.tscn" id="1_ee2ao"]
[ext_resource type="Shader" path="res://resources/effects/scrolling_background.gdshader" id="2_la6i3"]
[ext_resource type="Texture2D" uid="uid://pxh0eupdk11y" path="res://graphics/ui_checkerboard_background.png" id="3_f3wbn"]
[ext_resource type="Shader" path="res://resources/effects/ui_drop_shadow.gdshader" id="4_ermdo"]
[ext_resource type="PackedScene" uid="uid://ntwtsqborp4r" path="res://scenes/ui/loadout item/loadout_item.tscn" id="5_b752m"]
[ext_resource type="Texture2D" uid="uid://w88tyimfg3hx" path="res://graphics/ui_9_slice.png" id="5_qf6os"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_668jp"]
shader = ExtResource("2_la6i3")
shader_parameter/speed = 0.5

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_x3s2v"]
texture = ExtResource("5_qf6os")
texture_margin_left = 5.0
texture_margin_top = 5.0
texture_margin_right = 5.0
texture_margin_bottom = 5.0
modulate_color = Color(0.294118, 0.305882, 0.34902, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_limjs"]
shader = ExtResource("4_ermdo")
shader_parameter/background_colors = PackedColorArray(0.313726, 0.32549, 0.364706, 1, 0.294118, 0.305882, 0.34902, 1, 0.294118, 0.305882, 0.34902, 1)
shader_parameter/shadow_color = Color(0.14902, 0.156863, 0.207843, 1)
shader_parameter/offset_in_pixels = Vector2(0, 2)

[node name="Shop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0f65x")
loadout_item_scene = ExtResource("5_b752m")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
texture_repeat = 2
material = SubResource("ShaderMaterial_668jp")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_f3wbn")
stretch_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="MainVBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="HSplitContainer" type="HSplitContainer" parent="CanvasLayer/MarginContainer/MainVBoxContainer"]
layout_mode = 2
dragger_visibility = 2

[node name="ShopVBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer/MainVBoxContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="ShopTitleContainer" type="MarginContainer" parent="CanvasLayer/MarginContainer/MainVBoxContainer/HSplitContainer/ShopVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/MarginContainer/MainVBoxContainer/HSplitContainer/ShopVBoxContainer/ShopTitleContainer"]
layout_mode = 2

[node name="ShopTitle" type="RichTextLabel" parent="CanvasLayer/MarginContainer/MainVBoxContainer/HSplitContainer/ShopVBoxContainer/ShopTitleContainer/PanelContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0.14902, 0.156863, 0.207843, 1)
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "[center][wave amp=50.0 freq=5.0]Shop[/wave][/center]"
fit_content = true

[node name="CardsMarginContainer" type="MarginContainer" parent="CanvasLayer/MarginContainer/MainVBoxContainer/HSplitContainer/ShopVBoxContainer"]
layout_mode = 2

[node name="WeaponCardContainer" type="HBoxContainer" parent="CanvasLayer/MarginContainer/MainVBoxContainer/HSplitContainer/ShopVBoxContainer/CardsMarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4

[node name="WeaponCard1" parent="CanvasLayer/MarginContainer/MainVBoxContainer/HSplitContainer/ShopVBoxContainer/CardsMarginContainer/WeaponCardContainer" instance=ExtResource("1_ee2ao")]
layout_mode = 2

[node name="WeaponCard2" parent="CanvasLayer/MarginContainer/MainVBoxContainer/HSplitContainer/ShopVBoxContainer/CardsMarginContainer/WeaponCardContainer" instance=ExtResource("1_ee2ao")]
layout_mode = 2

[node name="WeaponCard3" parent="CanvasLayer/MarginContainer/MainVBoxContainer/HSplitContainer/ShopVBoxContainer/CardsMarginContainer/WeaponCardContainer" instance=ExtResource("1_ee2ao")]
layout_mode = 2

[node name="ShopButtonsContainer" type="MarginContainer" parent="CanvasLayer/MarginContainer/MainVBoxContainer/HSplitContainer/ShopVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/MarginContainer/MainVBoxContainer/HSplitContainer/ShopVBoxContainer/ShopButtonsContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MarginContainer/MainVBoxContainer/HSplitContainer/ShopVBoxContainer/ShopButtonsContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/MarginContainer/MainVBoxContainer/HSplitContainer/ShopVBoxContainer/ShopButtonsContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="RerollButton" type="Button" parent="CanvasLayer/MarginContainer/MainVBoxContainer/HSplitContainer/ShopVBoxContainer/ShopButtonsContainer/PanelContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_type_variation = &"ButtonYellow"
text = "Reroll: 1G"

[node name="LockButton" type="Button" parent="CanvasLayer/MarginContainer/MainVBoxContainer/HSplitContainer/ShopVBoxContainer/ShopButtonsContainer/PanelContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(86, 0)
layout_mode = 2
theme_type_variation = &"ButtonOrange"
text = "Lock"

[node name="LoadoutVBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer/MainVBoxContainer/HSplitContainer"]
custom_minimum_size = Vector2(278, 0)
layout_mode = 2
size_flags_horizontal = 6

[node name="LoadoutTitleContainer" type="MarginContainer" parent="CanvasLayer/MarginContainer/MainVBoxContainer/HSplitContainer/LoadoutVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/MarginContainer/MainVBoxContainer/HSplitContainer/LoadoutVBoxContainer/LoadoutTitleContainer"]
layout_mode = 2

[node name="LoadoutTitle" type="RichTextLabel" parent="CanvasLayer/MarginContainer/MainVBoxContainer/HSplitContainer/LoadoutVBoxContainer/LoadoutTitleContainer/PanelContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0.14902, 0.156863, 0.207843, 1)
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "[center][wave amp=50.0 freq=5.0]Loadout[/wave][/center]"
fit_content = true

[node name="LoadoutMainContainer" type="MarginContainer" parent="CanvasLayer/MarginContainer/MainVBoxContainer/HSplitContainer/LoadoutVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/MarginContainer/MainVBoxContainer/HSplitContainer/LoadoutVBoxContainer/LoadoutMainContainer"]
layout_mode = 2

[node name="LoadoutItemsContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer/MainVBoxContainer/HSplitContainer/LoadoutVBoxContainer/LoadoutMainContainer/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 0

[node name="MenuBarContainer" type="MarginContainer" parent="CanvasLayer/MarginContainer/MainVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/MarginContainer/MainVBoxContainer/MenuBarContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MarginContainer/MainVBoxContainer/MenuBarContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/MarginContainer/MainVBoxContainer/MenuBarContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer/MainVBoxContainer/MenuBarContainer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="OptionsButton" type="Button" parent="CanvasLayer/MarginContainer/MainVBoxContainer/MenuBarContainer/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_type_variation = &"ButtonBlue"
text = "Options"

[node name="MainMenuButton" type="Button" parent="CanvasLayer/MarginContainer/MainVBoxContainer/MenuBarContainer/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_type_variation = &"ButtonBlue"
text = "Main Menu"

[node name="HelpButton" type="Button" parent="CanvasLayer/MarginContainer/MainVBoxContainer/MenuBarContainer/PanelContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
theme_type_variation = &"ButtonBlue"
theme_override_font_sizes/font_size = 48
text = "?"

[node name="MarginContainer" type="PanelContainer" parent="CanvasLayer/MarginContainer/MainVBoxContainer/MenuBarContainer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_x3s2v")

[node name="GoldLabelContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer/MainVBoxContainer/MenuBarContainer/PanelContainer/MarginContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="GoldTextLabel" type="RichTextLabel" parent="CanvasLayer/MarginContainer/MainVBoxContainer/MenuBarContainer/PanelContainer/MarginContainer/HBoxContainer/MarginContainer/GoldLabelContainer"]
modulate = Color(1, 0.803922, 0.458824, 1)
layout_mode = 2
bbcode_enabled = true
text = "[center][wave amp=10 freq=2.5]Gold[/wave][/center]"
fit_content = true

[node name="GoldValueLabel" type="RichTextLabel" parent="CanvasLayer/MarginContainer/MainVBoxContainer/MenuBarContainer/PanelContainer/MarginContainer/HBoxContainer/MarginContainer/GoldLabelContainer"]
unique_name_in_owner = true
modulate = Color(0.956863, 0.768627, 0.439216, 1)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "[center][wave amp=10 freq=2.5]12[/wave][/center]"
fit_content = true

[node name="MarginContainer2" type="PanelContainer" parent="CanvasLayer/MarginContainer/MainVBoxContainer/MenuBarContainer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_x3s2v")

[node name="StageLabelContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer/MainVBoxContainer/MenuBarContainer/PanelContainer/MarginContainer/HBoxContainer/MarginContainer2"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="StageTextLabel" type="RichTextLabel" parent="CanvasLayer/MarginContainer/MainVBoxContainer/MenuBarContainer/PanelContainer/MarginContainer/HBoxContainer/MarginContainer2/StageLabelContainer"]
modulate = Color(0.956863, 0.956863, 0.956863, 1)
layout_mode = 2
bbcode_enabled = true
text = "[center][wave amp=10 freq=2.5]Stage[/wave][/center]"
fit_content = true

[node name="StageValueLabel" type="RichTextLabel" parent="CanvasLayer/MarginContainer/MainVBoxContainer/MenuBarContainer/PanelContainer/MarginContainer/HBoxContainer/MarginContainer2/StageLabelContainer"]
unique_name_in_owner = true
modulate = Color(0.956863, 0.956863, 0.956863, 1)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "[center][wave amp=10 freq=2.5]6[/wave][/center]"
fit_content = true

[node name="FightButton" type="Button" parent="CanvasLayer/MarginContainer/MainVBoxContainer/MenuBarContainer/PanelContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_type_variation = &"ButtonGreen"
theme_override_font_sizes/font_size = 32
text = "Fight!"

[node name="ShadowCaster" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="ShadowCaster"]
material = SubResource("ShaderMaterial_limjs")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[connection signal="pressed" from="CanvasLayer/MarginContainer/MainVBoxContainer/HSplitContainer/ShopVBoxContainer/ShopButtonsContainer/PanelContainer/MarginContainer/HBoxContainer/RerollButton" to="." method="_on_reroll_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/MainVBoxContainer/HSplitContainer/ShopVBoxContainer/ShopButtonsContainer/PanelContainer/MarginContainer/HBoxContainer/LockButton" to="." method="_on_lock_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/MainVBoxContainer/MenuBarContainer/PanelContainer/MarginContainer/HBoxContainer/FightButton" to="." method="_on_fight_button_pressed"]
